change website font from cursive to a generic font family

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ ol, ul {
     color:rgb(155, 111, 0);
 }
 p{
-    font-family:cursive;
+    font-family:'Times New Roman', Times, serif;
     color:hsl(180, 100%, 25%);
 }
 .lasagna {
