--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ p{
     font-family:'Times New Roman', Times, serif;
     color:hsl(180, 100%, 25%);
     text-align: center;
+    font-weight:bold;
 }
 .lasagna {
     margin-left:30px; color:rgb(164, 100, 10);
