--- a/style.css
+++ b/style.css
@@ -11,20 +11,29 @@ div img{
     border-radius: 50%;
 }
 h1{
-    margin-left:30px;
-  text-align: center;
+   position: absolute;
+   left:46%;
+   margin:0;
+   top:5%;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
 h2 {
     text-align:center;
   }
+div ul{
+    position:absolute;
+    top:47%;
+    left:40%;
+    margin:0;
+}
 ol, ul {
-    text-align:center;
-    list-style: inside;
     font-family:'Times New Roman', Times, serif;
     font-size:20px;
+    font-weight:bold;
     color:green;
+    list-style:inside;
+    text-align: center;
 }
 .not-aligned{
     padding:0px;
@@ -37,10 +46,15 @@ p{
     font-weight:bold;
 }
 .lasagna {
-    margin-left:30px; color:rgb(164, 100, 10);
+    color:rgb(164, 100, 10);
     font-weight:900; -webkit-text-stroke-width: 0px;
     font-family: cursive;
 }
 .soup{
     border-radius:10%;
+}
+.header-non-index {
+    text-align:center;
+    position: static;
+    margin:10;
 }
