--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ p{
 }
 
 .odin-recipes {
-    width:220px;
-    margin-left:665px;
+    /* width:220px; */
+    /* margin-left:665px; */
     color:red;
     -webkit-text-stroke-color: black;
 }
