--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
+body {
+    margin:0px;
+}
 html{
-    box-sizing:border box;
+    box-sizing:border-box;
 }
 *,*:before, *:after {
     box-sizing:inherit;
-}
-*{
-    background-color: #eeeeee;
+    background-color: hsl(34, 57%, 90%);
 }
 h3, h4, div{
     text-align: center;
@@ -13,21 +14,18 @@ h3, h4, div{
 h2,h3,h4{
   color:rgb(0, 116, 0);
 }
-div img{
-    border-radius: 50%;
-}
+ 
 h1{
     text-align: center;
     -webkit-text-stroke-width: 1px;
 }
 h2 {
     text-align:center;
-  }
-
+}
 .grid{
     display:grid;
     place-items:center;
-    padding:290px 0px;
+    padding: 200px 0;
 }
 ol, ul {
     font-family:'Times New Roman', Times, serif;
@@ -47,22 +45,36 @@ p{
     text-align: center;
     font-weight:bold;
 }
+.green img{
+  border-radius:50%;
+}
 .lasagna {
-    color:rgb(164, 100, 10);
+    color:rgb(255, 179, 0);
     font-weight:900; -webkit-text-stroke-width: 0px;
     font-family: cursive;
 }
 .soup{
     border-radius:10%;
 }
-
 .odin-recipes {
+    font-size:40px;
+    padding-top:70px;
+    height:200px;
+    margin-top:0px;
+    background-color: hsl(34, 57%, 70%);
     color:red;
     -webkit-text-stroke-color: black;
 }
-
+.odin-recipes span {
+    background-color: rgb(222, 184, 135);
+}
 .odin-recipes span:hover{
-    background-color: orange;
+    background-color:rgb(222, 184, 135);
+    color:hsl(34, 57%, 90%);
+}
+a, a:link, a:visited{
+    color:black;
+}
+a:hover{
     color:blue;
-    border-radius:100%;
 }
